[v0.0.5 - 08/01/2011]
  - Page détails en place (Rating Stars pas encore configuré)

[v0.0.4 - 07/01/2011]
  - Changement du desgin (Optimisation)
  - Mise en place de SystemClass (Contiendra une très grosse partie des fonctions vitale et secondaire du site)
  - Pré mise en place de Rating Stars (Vote étoile)

[v0.0.3 - 05/01/2011]
  - Ajout des images & feuille de style

[v0.0.2 - 01/01/2011]
  - Préparation d'un design
  - Mise en place d'un système de nom de page
  - Création du script incluant les pages

[v0.0.1 - 31/12/2010]
  - Création du porjet
  - Mise en place de la configuration
  - Création de la connexion a la base de donnée
  - Création d'une première structure du site