@@ -1,5 +1,6 @@
 [v0.0.5 - 08/01/2011]
   - Page détails en place (Rating Stars pas encore configuré)
+  - Rating Stars (Calcul) terminé
 
 [v0.0.4 - 07/01/2011]
   - Changement du desgin (Optimisation)
